@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,11 +23,11 @@
 
 /*
  * @test
- * @bug 8206986
+ * @bug 8206986 8243548
  * @summary Verify that an switch expression over enum can be exhaustive without default.
- * @compile --enable-preview -source 13 ExhaustiveEnumSwitch.java
+ * @compile ExhaustiveEnumSwitch.java
  * @compile ExhaustiveEnumSwitchExtra.java
- * @run main/othervm --enable-preview ExhaustiveEnumSwitch
+ * @run main ExhaustiveEnumSwitch
  */
 
 public class ExhaustiveEnumSwitch {
@@ -56,4 +56,12 @@ public class ExhaustiveEnumSwitch {
 }
 enum ExhaustiveEnumSwitchEnum {
     A, B;
+    class NestedClass {}
+    enum NestedEnum {}
+    interface NestedInterface {}
+    @interface NestedAnnotation {}
+    void nestedMethod() {}
+    static void nestedStaticMethod() {}
+    int nestedField;
+    static int nestedStaticField;
 }
